update exlaunch + npdm

--- a/config.json
+++ b/config.json
@@ -10,6 +10,8 @@
 	"is_retail":	true,
 	"pool_partition":	0,
 	"is_64_bit":	true,
+	"disable_device_address_space_merge":	true,
+	"optimize_memory_allocation":	true,
 	"address_space_type":	3,
 	"filesystem_access":	{
 		"permissions":	"0xffffffffffffffff"
@@ -170,8 +172,8 @@
 		}, {
 			"type":	"debug_flags",
 			"value":	{
-				"allow_debug":	false,
-				"force_debug":	true
+				"allow_debug":	true,
+				"force_debug":	false
 			}
 		}]
 }
